--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -275,7 +275,7 @@ the absorption medium in units of the radiation length.
 In high-energy physics applications, the material budget of pixel
 detectors is minimised in order to have the least scattering angles possible.
 
-\subsection{\textsc{Geant4}}
+\subsection{\textsc{Geant4}}\label{sec:Silicon_Geant4}
 
 \textsc{Geant4}~\cite{Agostinelli:2002hh}, as an object-oriented
 simulation toolkit implemented in C++ programming language, is widely
