--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -138,7 +138,7 @@
   \end{subfigure}
   \caption{Energy deposition and comparison to
     \textsc{Geant4}. W0005\_E02, Run 661, THL=1160.}
-  \label{fig:EdepW19L8}
+  \label{fig:EdepW5E2}
 \end{figure}
 
 \begin{figure}[htbp] \centering
@@ -156,5 +156,5 @@
   \end{subfigure}
   \caption{Energy deposition and comparison to
     \textsc{Geant4}. W0005\_F01, Run 761, THL=1153.}
-  \label{fig:EdepW19L8}
+  \label{fig:EdepW5F1}
 \end{figure}
