--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -113,6 +113,7 @@
   include/CLIC,
   include/Silicon,
   include/Calibration,
+include/AllPix,
   include/Telescope,
   include/ThinSensors,
   include/ActiveEdgeSensors,
@@ -213,6 +214,7 @@ refs,
 \input{include/CLIC}
 \input{include/Silicon}
 \input{include/Calibration}
+\input{include/AllPix}
 \input{include/Telescope}
 \input{include/ThinSensors}
 \input{include/ActiveEdgeSensors}
