--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -1,7 +1,24 @@
 % ==============================================================================
-\chapter{Pixel-beam telescope and simulation framework}
+\chapter{The Timepix3 pixel-beam telescope}
 \label{ch:Telescope}
 %==============================================================================  
+
+%% --------------------------------------------- %%
+Testing in a high energy beam is a crucial step in the R\&D projects
+for the development of the pixel detector sensors and readout chips. 
+%% --------------------------------------------- %%
+\section{Beamlines}
+%% --------------------------------------------- %%
+\section{Components of the Timepix3 telescope}
+%% --------------------------------------------- %%
+\subsection{Sensors and mechanics}
+\subsection{Data acquisition system}
+%% --------------------------------------------- %%
+\section{Reconstruction and analysis softwares}
+%% --------------------------------------------- %%
+\section{Tracking resolution studies}
+\subsection{Data}
+\subsection{Simulation}
 
 %% --------------------------------------------- %%
 \section{The Timepix3 telescope} \label{sec:Timepix3Telescope}
