[Telescope] few updates

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -329,3 +329,78 @@ url = "http://www.sciencedirect.com/science/article/pii/016890029190152G",
 author = "F. Krummenacher",
 
 }
+
+@article{Akiba:2013yxa,
+      author         = "Akiba, Kazuyoshi and others",
+      title          = "{The Timepix Telescope for High Performance Particle
+                        Tracking}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A723",
+      year           = "2013",
+      pages          = "47",
+      doi            = "10.1016/j.nima.2013.04.060",
+      eprint         = "1304.5175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1304.5175;%%"
+}
+
+@article{Visser:2015bsa,
+      author         = "Visser, J. and Beuzekom, M. van and Boterenbrood, Henk
+                        and Heijden, B. van der and Muñoz, J. I. and Kulis, S.
+                        and Munneke, B. and Schreuder, F.",
+      title          = "{SPIDR: a read-out system for Medipix3 \& Timepix3}",
+      booktitle      = "{Proceedings, 17th  International Workshop on Radiation
+                        Imaging Detectors (IWORID 2015)}",
+      journal        = "JINST",
+      volume         = "10",
+      year           = "2015",
+      number         = "12",
+      pages          = "C12028",
+      doi            = "10.1088/1748-0221/10/12/C12028",
+      SLACcitation   = "%%CITATION = JINST,10,C12028;%%"
+}
+
+@online{XilinxVirtex7,
+      title          = "Xilinx Virtex-7 FPGA Family",
+      url            = "http://www.xilinx.com/products/silicon-devices/fpga/virtex-7.html"
+}
+
+@online{EutelescopeWebsite,
+      title          = "EUTelescope Software Developers Website",
+      url            = "http://eutelescope.web.cern.ch/"
+}
+
+@article{Aplin:2009zz,
+      author         = "Aplin, S. J. and Engels, J. and Gaede, F.",
+      title          = "{A production system for massive data processing in
+                        ILCSoft}",
+      year           = "2009",
+      reportNumber   = "EUDET-MEMO-2009-12",
+      SLACcitation   = "%%CITATION = EUDET-MEMO-2009-12;%%"
+}
+
+
+@article{Rubinskiy:2014kza,
+      author         = "Rubinskiy, Igor and Perrey, Hanno",
+      title          = "{An EUDET/AIDA Pixel Beam Telescope for Detector
+                        Development}",
+      booktitle      = "{Proceedings, 3rd International Conference on Technology
+                        and Instrumentation in Particle Physics (TIPP 2014)}",
+      journal        = "PoS",
+      volume         = "TIPP2014",
+      year           = "2014",
+      pages          = "122",
+      SLACcitation   = "%%CITATION = POSCI,TIPP2014,122;%%"
+}
+
+@article{Jansen:2016bkd,
+      author         = "Jansen, H. and others",
+      title          = "{Performance of the EUDET-type beam telescopes}",
+      year           = "2016",
+      eprint         = "1603.09669",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "DESY-16-055",
+      SLACcitation   = "%%CITATION = ARXIV:1603.09669;%%"
+}
