--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -11,19 +11,11 @@ Operating conditions for the Timepix3 readout ASICs:
 \item TOT clock frequency: $40\,\megahertz$
 \item VFBK: 150
 \end{itemize}
- 
 
 
-\subsection{Experimental setup at the CERN SPS}
-The assemblies are tested at the H6 beam of the CERN SPS using the $120\,\gev$
-pion beam. The particle rate obtained per spill is $\sim2.6 \times
-10^6$ (UNITS?). The telescope planes were positioned in a way to give
-the best tracking resolution for the given beam energy and the level
-of multiple scatterings.
-For most of the measurements, the DUT is perpendicular
-to the beam. A scan was done on the bias voltage and the threshold of
-the DUT. The bias scan allows to obtain the depletion voltage.
-
+ For most of the measurements, the DUT is perpendicular to the beam. A
+ scan was done on the bias voltage and the threshold of the DUT. The
+ bias scan allows to obtain the depletion voltage.
 
 %% --------------------------------------------- %%
 \section{Test-beam results for thin sensors}
